--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,91 @@
+/* themes variables */
+.theme-light{
+	--bg-primary: #F4F6F8;
+	--bg-secondary: #FFFFFF;
+	--color-primary: #222222;
+	--border-color: #C1C1C1;
+	--shadow: #f4f6f8d0;
+}
+.theme-dark{
+	--bg-primary: #1B1B1B;
+	--bg-secondary: #353535;
+	--color-primary: #D9D9D9;
+	--border-color: #000000;
+	--shadow: #1b1b1bc9;
+}
+/* ---------------------------- */
+
+
+/* light-dark switch */
+/* ----------------------------- */
+.switch {
+	position: relative;
+	display: inline-block;
+	width: 60px;
+	height: 34px;
+	margin: 0 10px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+	opacity: 0;
+	width: 0;
+	height: 0;
+}
+
+/* The slider */
+.slider {
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: #ccc;
+	-webkit-transition: .4s;
+	transition: .4s;
+}
+
+.slider:before {
+	position: absolute;
+	content: "";
+	height: 26px;
+	width: 26px;
+	left: 4px;
+	bottom: 4px;
+	background-color: white;
+	-webkit-transition: .4s;
+	transition: .4s;
+}
+
+input:checked + .slider {
+	background-color: #2196F3;
+}
+
+input:focus + .slider {
+	box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+	-webkit-transform: translateX(26px);
+	-ms-transform: translateX(26px);
+	transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+	border-radius: 34px;
+}
+
+.slider.round:before {
+	border-radius: 50%;
+}
+
+/* ============================ */
+
+
+/* reset default styles */
+/* --------------------------- */
 *{
 	box-sizing: border-box;
 	font-size: 18px;
@@ -5,54 +93,297 @@
 body{
 	margin: 0;
 	font-family: sans-serif;
+	background-color: var(--bg-primary);
+	color: var(--color-primary);
 }
+/* =========================== */
 
+
+/* header & footer */
 header.main-header, footer.main-footer{
 	width: 100%;
-	display: flex;
 	padding: 15px;
-	background-color: black;
-	color: white;
+	background-color: var(--bg-secondary);
 }
-main.main-content{
-	min-height: 100vh;
+
+/* topbar */
+/* ---------------------------- */
+header.main-header{
+	display: flex;
+	position: sticky;
+	width: 100%;
+	top: 0;
+	z-index: 1000;
 }
-.logo{
-	flex: 1;
+.website-logo{
+	flex: 3;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
-nav.main-nav{
-	flex: 2;
+
+/* mobile menu toggle */
+.menu-toggle{
+	flex: 1;
+	min-height: 30px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: flex-end;
 }
+.hamburger-bar{
+	background-color: var(--color-primary);
+	width: 30px;
+	height: 5px;
+	transition: transform .5s;
+}
+.menu-toggle.open .top{
+	transform: 
+	rotate(45deg) 
+	translate(8px, 9px);
+}
+.menu-toggle.open .middle{
+	transform: scaleX(0);
+}
+.menu-toggle.open .bottom{
+	transform: 
+	rotate(-45deg)
+	translate(9px, -9px)
+}
+
+.website-menu{
+	background-color: inherit;
+	border-top: 1px solid var(--border-color);
+	position: fixed;
+	width: 100%;
+	height: calc(100vh - 61px);
+	top: 61px;
+	right: 0;
+	transition: transform .5s;
+	transform: translateX(100%);
+}
+.website-menu.open{
+	transform: translateX(0);
+}
+
+.theme-switch{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+/* actual menu */
 ul.menu{
 	list-style-type: none;
 	padding: 0;
 	margin: 0;
-}
-ul.main-menu{
-	display: flex;
-	justify-content: flex-end;
-	padding-right: 30px;
-}
-li.main-menu-item{
-	padding: 10px;
-	margin: 0;
-	position: relative;
+	line-height: 200%;
 }
 ul.sub-menu{
-	line-height: 150%;
-	background-color: black;
-	position: absolute;
-	font-size: 0.9rem;
-	transform-origin: top;
-	transform: scaleY(0);
-	transition: transform 0.3s;
+	background-color: var(--bg-primary);
+	display: none;
 }
-li.main-menu-item:hover .sub-menu{
-	transform: scaleY(1);
+li.menu-item:hover ul.sub-menu{
+	display: block;
+}
+li.menu-item{
+	border-bottom: 1px solid var(--border-color);
+	padding: 10px 0 0 0;
 }
 li.sub-menu-item{
-	padding: 10px;
+	padding-left: 20px;
 }
+a.menu-link{
+	color: inherit;
+	text-decoration: none;
+	padding-left: 10px;
+}
+
+/* ============================= */
+
+/* login form */
+/* ----------------------------- */
+h2{
+	margin: 0;
+	padding: 15px 0;
+}
+.login-form{
+	max-width: 400px;
+	margin: 30px auto;
+	padding: 5px;
+	width: 100%;
+}
+.login-form-input{
+	width: 100%;
+	border: none;
+	margin: 5px 0;
+	padding: 5px;
+	border-radius: 10px;
+	background-color: var(--bg-primary);
+	color: var(--color-primary);
+}
+.login-form-input:focus{
+	outline: none;
+}
+.login-popup{
+	display: none;
+}
+#open-form{
+	display: none;
+}
+/* ============================= */
+
+
+/* page content */
+/* ----------------------------- */
+main.page-content{
+	min-height: 100vh;
+}
+.container{
+	max-width: 900px;
+	margin: 0 auto;
+}
+section{
+	padding: 20px 0;
+}
+h1{
+	margin: 0;
+	padding: 15px 0;
+}
+/* ============================= */
+
+
+/* homepage slider */
+/* ---------------------------- */
+section.recommended{
+	border-bottom: 2px solid var(--color-primary);
+	padding: 50px 0;
+}
+#my-slider{
+	width: 100%;
+	height: 400px;
+}
+.slide{
+	position: relative;
+}
+img.slide-img{
+	width: 100%;
+	height: 100%;
+}
+.slide-caption{
+	padding: 15px;
+	width: 100%;
+	bottom: 0;
+	transform: translateY(-100%);
+	color: white;
+	text-shadow: 0px 0px 4px #000000;
+}
+
+/* pagination */
+.slider-pagination{
+	text-align: center;
+}
+.pag{
+	display: inline-block;
+	font-size: 3rem;
+	padding: 0 15px;
+}
+/* ============================= */
+
+/* newest articles */
+/* ----------------------------- */
+.newest-grid{
+	display: grid;
+	grid-template-columns: repeat(2,1fr);
+	gap: 20px;
+}
+img.article-excerpt-img{
+	width: 100%;
+	height: auto;
+}
+/* ============================= */
+
+
+/* desktop */
+/* ----------------------------- */
+@media (min-width: 900px) {
+	.website-logo{
+		flex: 1;
+	}
+	.menu-toggle{
+		display: none;
+	}
+	.website-menu{
+		position: static;
+		width: auto;
+		transform: none;
+		height: auto;
+		border: none;
+		flex: 4;
+		display: flex;
+	}
+	.theme-switch{
+		flex: 1;
+	}
+	nav.main-nav{
+		flex: 3;
+	}
+
+	ul.main-menu{
+		display: flex;
+		justify-content: flex-end;
+	}
+	ul.sub-menu{
+		padding: 10px;
+		position: absolute;
+		background-color: var(--bg-secondary);
+		border: 2px solid var(--border-color);
+		border-radius: 5px;
+	}
+	li.menu-item{
+		border-bottom: none;
+		padding: 0 10px;
+		position: relative;
+	}
+	li.sub-menu-item{
+		padding-left: 0;
+	}
+
+
+	/* login form */
+	.form-moblie{
+		display: none;
+	}
+	.login-popup{
+		display: none;
+		position: fixed;
+		width: 100vw;
+		height: 100vh;
+		top: 0;
+		left: 0;
+		background-color: var(--shadow);
+		justify-content: center;
+		align-items: center;
+	}
+	.login-popup.open{
+		display: flex;
+	}
+	.login-form{
+		background-color: var(--bg-secondary);
+		padding: 0 15px 15px;
+		border-radius: 15px;
+	}
+	h2.login{
+		position: relative;
+	}
+	i#close-form{
+		position: absolute;
+		right: 0;
+		top: 10px;
+		font-size: 1.5rem;
+	}
+	#open-form{
+		display: list-item;
+	}
+}
+/* ============================= */
