--- a/public/style.css
+++ b/public/style.css
@@ -96,6 +96,14 @@ body{
 	background-color: var(--bg-primary);
 	color: var(--color-primary);
 }
+a{
+	text-decoration: none;
+	color: inherit;
+	font-size: inherit;
+}
+a:hover{
+	color: goldenrod;
+}
 /* =========================== */
 
 
@@ -194,8 +202,6 @@ li.sub-menu-item{
 	padding-left: 20px;
 }
 a.menu-link{
-	color: inherit;
-	text-decoration: none;
 	padding-left: 10px;
 }
 
@@ -233,6 +239,27 @@ h2{
 }
 /* ============================= */
 
+/* message */
+/* ---------------------------- */
+.messages{
+	position: fixed;
+	bottom: 10px;
+	right: 10px;
+	width: calc(100% - 20px);
+}
+.message{
+	padding: 10px;
+	border-radius: 10px;
+	background-color: var(--bg-secondary);
+	margin-bottom: 10px;
+}
+@media (min-width: 720px){
+	.messages{
+		max-width: 400px;
+	}
+}
+/* ============================ */
+
 
 /* page content */
 /* ----------------------------- */
@@ -261,7 +288,13 @@ section.recommended{
 }
 #my-slider{
 	width: 100%;
-	height: 400px;
+	height: calc(100vw / 2);
+}
+@media (min-width: 900px){
+	#my-slider{
+		width: 100%;
+		height: calc(900px / 2);
+	}
 }
 .slide{
 	position: relative;
@@ -277,6 +310,31 @@ img.slide-img{
 	transform: translateY(-100%);
 	color: white;
 	text-shadow: 0px 0px 4px #000000;
+	box-shadow: inset 0px -100px 35px -35px rgba(60, 60, 60, 0.9);
+}
+
+h1.recommended-header{
+	font-size: 1.5rem;
+	text-align: center;
+	padding: 0 0 25px 0;
+}
+h2.excerpt-title{
+	font-size: 1.7rem;
+	padding: 7px 0 25px 0;
+}
+.author{
+	position: absolute;
+	bottom: 10px;
+	right: 10px;
+	font-size: .85rem;
+}
+.cat-btn{
+	background-color: var(--bg-secondary);
+	color: var(--color-primary);
+	padding: 7px;
+	border-radius: 5px;
+	width: fit-content;
+	font-size: .8rem;
 }
 
 /* pagination */
@@ -295,11 +353,53 @@ img.slide-img{
 .newest-grid{
 	display: grid;
 	grid-template-columns: repeat(2,1fr);
+	grid-auto-rows: 1fr;
 	gap: 20px;
+}
+article.article-excerpt{
+	position: relative;
+	height: auto;
+	color: white;
 }
 img.article-excerpt-img{
 	width: 100%;
 	height: auto;
+}
+.caption-hider{
+	overflow-y: hidden;
+	width: 100%;
+	height: 100%;
+	background-color: var(--bg-primary);
+}
+.article-excerpt-caption{
+	position: absolute;
+	padding: 7px;
+	width: 100%;
+	height: 100%;
+	bottom: 0;
+	left: 0;
+	background-color: rgba(60, 60, 60, 0.6);
+	transition: opacity .35s;
+	opacity: 0
+}
+article.article-excerpt:hover .article-excerpt-caption{
+	opacity: 1;
+}
+a.more-newest-btn{
+	display: block;
+	width: fit-content;
+	margin: 0 auto;
+	padding: 10px;
+	background-color: var(--bg-secondary);
+	border: 2px solid var(--color-primary);
+}
+a.more-newest-btn:hover{
+	border-color: goldenrod;
+}
+@media (max-width: 600px) {
+	.newest-grid{
+		grid-template-columns: repeat(1,1fr);
+	}
 }
 /* ============================= */
 
